--- a/src/pages/landing/landing.module.css
+++ b/src/pages/landing/landing.module.css
@@ -150,7 +150,7 @@ div#box div {
   color: #fff;
 }
 .footerContainer form textarea {
-    width: 96.5%;
+    width: 94.5%;
     margin: 15px 0;
     border-radius: 20px;
     padding: 18px;
@@ -189,6 +189,9 @@ button img {
 @media (min-width: 992px) and (max-width: 1199.98px) {
   .container, .footerContainer {
     max-width: 960px;
+  }
+  .footerContainer form textarea {
+    width: 92.5%;
   }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
